Docs: Update index

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             
 
             <div class="items-trim">
-                <div class="clm clm-name">Formato de casp de uso extendido</div>
+                <div class="clm clm-name">Formato de caso de uso extendido</div>
                 <div class="clm"><a href="./TRIMESTRE III/V1/CASOS DE USO/Formato de Caso de Uso Extendido.pdf"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
                 <div class="clm"><a href="https://soysena-my.sharepoint.com/:w:/g/personal/scastillo70_soy_sena_edu_co/EYXr9eZ2salAlxt1uH8_NX0BxM811Sh3-owMfgeQFCHTnQ?e=Ovxmea"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
