--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
             <div class="items-trim">
                 <div class="clm clm-name">Manual Técnico</div>
                 <div class="clm"><a href="./TRIMESTRE IV/V1/Manual Tecnico/"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
-                <div class="clm"><a href="#"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
+                <div class="clm"><a href="https://soysena-my.sharepoint.com/:w:/g/personal/scastillo70_soy_sena_edu_co/EbcEx2eQTGJErthoe1i5ltQBMRsMzq8jnHXPoEyJTFaNGw?e=4bqHM9"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
 
             <div class="items-trim">
                 <div class="clm clm-name">Pruebas</div>
                 <div class="clm"><a href="./TRIMESTRE IV/V1/Documentacion de pruebas/"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
-                <div class="clm"><a href="#"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
+                <div class="clm"><a href="https://soysena-my.sharepoint.com/:w:/g/personal/scastillo70_soy_sena_edu_co/Efa3XVFTxgNPuSJKA2R-ECwBDFgcdl5ni-mpSKQW5xatsg?e=9ncVp5"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
             <div class="items-trim">
                 <div class="clm clm-name">Manual de Instalación</div>
                 <div class="clm"><a href="./TRIMESTRE IV/V1/Manual de instalacion/"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
-                <div class="clm"><a href="#"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
+                <div class="clm"><a href="https://soysena-my.sharepoint.com/:w:/g/personal/scastillo70_soy_sena_edu_co/EU3Jwr2c8K5AiupEawAUpQIBmfe80Dq2s-E5GgQSneh97A?e=tuiQQk"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
             <div class="items-trim">
                 <div class="clm clm-name">Diagrama de distribución</div>
@@ -55,12 +55,12 @@
             <div class="items-trim">
                 <div class="clm clm-name">Informe de migración de datos</div>
                 <div class="clm"><a href="./TRIMESTRE IV/V1/Informe de migración de datos/"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
-                <div class="clm"><a href="#"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
+                <div class="clm"><a href="https://soysena-my.sharepoint.com/:w:/g/personal/scastillo70_soy_sena_edu_co/Ed0BpN8qvXpNr0wzIA9P11YBIoYEKRwWiv4FDdtPls8sZA?e=M4PiS6"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
             <div class="items-trim">
                 <div class="clm clm-name">Plan de respaldo y migración</div>
                 <div class="clm"><a href="#"><img src="./assets/icons/home-free-icon-font.svg" alt=""></a></div>
-                <div class="clm"><a href="#"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
+                <div class="clm"><a href="https://soysena-my.sharepoint.com/:b:/g/personal/scastillo70_soy_sena_edu_co/EeSD76XNKVtJsfEDEtmeIboBQB1cAGFAlFN445oqjqRb5Q?e=KuDOuG"><img src="./assets/icons/cloud-share-free-icon-font.svg" alt=""></a></div>
             </div>
             <div class="items-trim">
                 <div class="clm clm-name">Modelo relacional</div>
